# NKU_cpp_homework

./: .gitignore  CMakeLists.txt  Game v1.0.cpp  README.md  build_cmake.ps1  build_cmake_debug.ps1  实验报告.md
core/include/: GameMode.h  LevelMode.h  ModeManager.h  PlayerData.h  PuzzleBoard.h  RandomMode.h
core/src/: LevelMode.cpp  ModeManager.cpp  PlayerData.cpp  PuzzleBoard.cpp  RandomMode.cpp  main.cpp
gui/include/: BoardController.h  BoardView.h  ChooseDiff.h  ChooseLevel.h  Home.h  MainWindow.h  Tool.h  board.h  choosediff.h
gui/src/: BoardController.cpp  BoardView.cpp  BoardView.ui  ChooseDiff.cpp  ChooseDiff.ui  ChooseLevel.cpp  ChooseLevel.ui  Home.cpp  Home.ui  MainWindow.cpp  Tool.cpp  board.cpp  board.ui  choosediff.cpp  choosediff.ui  main_gui.cpp
include/: ModeManager.h  PuzzleBoard.h
resources/: resources.qrc
src/: ModeManager.cpp  PuzzleBoard.cpp  main.cpp
